--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/GameEditor.Wcf.Harness.Wpf.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/GameEditor.Wcf.Harness.Wpf.csproj
@@ -91,6 +91,7 @@
     <Compile Include="AppBootstrapper.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="EventAggregators\CheckDirtyStatus.cs" />
+    <Compile Include="EventAggregators\ShowView.cs" />
     <Compile Include="EventAggregators\UpdateList.cs" />
     <Compile Include="EventAggregators\UpdateView.cs" />
     <Compile Include="Extensions\StringExtender.cs" />
@@ -108,10 +109,14 @@
     <Compile Include="TypedAutofacBootstrapper.cs" />
     <Compile Include="ViewModels\AllyDetailViewModel.cs" />
     <Compile Include="ViewModels\AllyListViewModel.cs" />
+    <Compile Include="ViewModels\AlternativeUnitDetailViewModel.cs" />
+    <Compile Include="ViewModels\AlternativeUnitListViewModel.cs" />
+    <Compile Include="ViewModels\AlternativeUnitViewModel.cs" />
     <Compile Include="ViewModels\ArmyDetailViewModel.cs" />
     <Compile Include="ViewModels\ArmyListViewModel.cs" />
     <Compile Include="ViewModels\ArmyUnitDetailViewModel.cs" />
     <Compile Include="ViewModels\ArmyUnitListViewModel.cs" />
+    <Compile Include="ViewModels\Base\BaseViewModel.cs" />
     <Compile Include="ViewModels\Base\DetailViewModel.cs" />
     <Compile Include="ViewModels\Base\ListViewModel.cs" />
     <Compile Include="ViewModels\LabelCheckboxViewModel.cs" />
@@ -119,11 +124,13 @@
     <Compile Include="ViewModels\LabelTextboxViewModel.cs" />
     <Compile Include="ViewModels\LabelViewModelBase.cs" />
     <Compile Include="Views\Interfaces\IAllyDetailView.cs" />
+    <Compile Include="Views\Interfaces\IAlternativeScreenTabItem.cs" />
     <Compile Include="Views\Interfaces\IArmyDetailView.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="ViewModels\ArmyListTabViewModel.cs" />
     <Compile Include="ViewModels\ArmyUnitTabViewModel.cs" />
     <Compile Include="Views\Interfaces\IArmyUnitDetailView.cs" />
+    <Compile Include="Views\Interfaces\IDetailView.cs" />
     <Compile Include="Views\Interfaces\IMainScreenTabItem.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -138,6 +145,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\AllyListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AlternativeUnitView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
