- Major refactor to provide interfaces for all ViewModel objects - Added some Unit tests to ensure Id fields are not enabled

--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/GameEditor.Wcf.Harness.Wpf.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/GameEditor.Wcf.Harness.Wpf.csproj
@@ -119,17 +119,26 @@
     <Compile Include="ViewModels\Base\BaseViewModel.cs" />
     <Compile Include="ViewModels\Base\DetailViewModel.cs" />
     <Compile Include="ViewModels\Base\ListViewModel.cs" />
+    <Compile Include="ViewModels\IAllyListViewModel.cs" />
+    <Compile Include="ViewModels\IAlternativeUnitDetailViewModel.cs" />
+    <Compile Include="ViewModels\IAlternativeUnitListViewModel.cs" />
+    <Compile Include="ViewModels\IAlternativeUnitViewModel.cs" />
+    <Compile Include="ViewModels\IArmyListTabViewModel.cs" />
+    <Compile Include="ViewModels\IArmyListViewModel.cs" />
+    <Compile Include="ViewModels\IArmyUnitListViewModel.cs" />
+    <Compile Include="ViewModels\IArmyUnitTabViewModel.cs" />
+    <Compile Include="ViewModels\IShellViewModel.cs" />
     <Compile Include="ViewModels\LabelCheckboxViewModel.cs" />
     <Compile Include="ViewModels\LabelComboboxViewModel.cs" />
     <Compile Include="ViewModels\LabelTextboxViewModel.cs" />
     <Compile Include="ViewModels\LabelViewModelBase.cs" />
-    <Compile Include="Views\Interfaces\IAllyDetailView.cs" />
+    <Compile Include="Views\Interfaces\IAllyDetailViewModel.cs" />
     <Compile Include="Views\Interfaces\IAlternativeScreenTabItem.cs" />
-    <Compile Include="Views\Interfaces\IArmyDetailView.cs" />
+    <Compile Include="Views\Interfaces\IArmyDetailViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="ViewModels\ArmyListTabViewModel.cs" />
     <Compile Include="ViewModels\ArmyUnitTabViewModel.cs" />
-    <Compile Include="Views\Interfaces\IArmyUnitDetailView.cs" />
+    <Compile Include="Views\Interfaces\IArmyUnitDetailViewModel.cs" />
     <Compile Include="Views\Interfaces\IDetailView.cs" />
     <Compile Include="Views\Interfaces\IMainScreenTabItem.cs" />
     <Compile Include="App.xaml.cs">
